src/rgvflood-k8s/templates/deployment.template.yaml
# [START kubernetes_deployment]
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${NAMESPACE}-app
  namespace: ${NAMESPACE}
  labels:
    app: ${NAMESPACE}-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${NAMESPACE}-app
  template:
    metadata:
      labels:
        app: ${NAMESPACE}-app
    spec:

      # [START volumes]
      volumes:

        - name: cloudsql-oauth-credentials
          secret:
            secretName: cloudsql-oauth-credentials

        - name: ${NAMESPACE}-secrets
          secret:
            secretName: ${NAMESPACE}-secrets

        - name: ${PROJECT_ID}-data-vol
          persistentVolumeClaim:
            claimName: ${NAMESPACE}-pvc
            readOnly: false

      # [END volumes]   

      containers:
  
      # [START rabbitmq]
      - name: rabbitmq
        image: rabbitmq:3.7-alpine
        # restartPolicy: on-failure
      # [END rabbitmq]

      # [START proxy_container]
      - image: gcr.io/cloudsql-docker/gce-proxy:1.16
        name: cloudsql-proxy
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                  "-instances=${PROJECT_ID}:us-south1:${PROJECT_ID}=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-oauth-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ${NAMESPACE}-secrets
            mountPath: /cloudsql
      # [END proxy_container] 

      # [START geoserver container]
      - name: geoserver
        image: geonode/geoserver:2.20.6
        livenessProbe:
          initialDelaySeconds: 60
          failureThreshold: 10
          periodSeconds: 60
          timeoutSeconds: 10
          # exec:
          #   command:
          #   - curl 
          #   - --fail 
          #   - --silent 
          #   - --write-out 
          #   - 'Geoserver HTTP CODE : %{http_code}\n'
          #   - --output 
          #   - /dev/null
          #   - http://127.0.0.1:8080/geoserver/rest/workspaces/${NAMESPACE}.html
          httpGet:
            path: "/geoserver/rest/workspaces/geonode.html"
            port: 8080
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /data
            name: ${PROJECT_ID}-data-vol
      # [END geoserver container]

      # [START celery container]
      - name: celery
        image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${NAMESPACE}/${NAMESPACE}:latest
        volumeMounts:
          - mountPath: /data
            name: ${PROJECT_ID}-data-vol
        command: ["/usr/src/geonode/entrypoint.sh", "celery-cmd"]
      # [END celery container]

      # [START django container]
      - name: django
        image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/${NAMESPACE}/${NAMESPACE}:latest
        imagePullPolicy: Always
        livenessProbe:
          initialDelaySeconds: 60
          failureThreshold: 10
          periodSeconds: 60
          timeoutSeconds: 10
          # exec:
          #   command:
          #   - curl 
          #   - --fail 
          #   - --silent 
          #   - --write-out 
          #   - 'Django HTTP CODE : %{http_code}\n'
          #   - --output 
          #   - /dev/null
          #   - http://127.0.0.1:8001/
          httpGet:
            path: "/"
            port: 8001
        ports:
          - containerPort: 8000
          - containerPort: 8001
        volumeMounts:
          - mountPath: /data
            name: ${PROJECT_ID}-data-vol
        command: ["/usr/src/geonode/entrypoint.sh", "uwsgi", "--ini", "/usr/src/geonode/uwsgi.ini"]
      # [END django container]

      # [START nginx container]
      - name: geonode
        image: ${REGION}-docker.pkg.dev/${PROJECT_ID}/geonode/nginx:latest
        imagePullPolicy: Always        
        ports:
          - name: http
            containerPort: 80
        volumeMounts:
          - mountPath: /data
            name: ${PROJECT_ID}-data-vol
      # [END nginx container]
